<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="32dp"
    android:id="@+id/layout_location_permission">

    <TextView
        android:id="@+id/textview_location_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_location_permission_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textAlignment="center"/>

    <Button
        android:visibility="gone"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_location_permission"
        android:id="@+id/button_grants_location_permission"
        android:text="@string/label_button_loc_perm_grants"
        android:layout_margin="12dp"/>

    <Button
        android:visibility="gone"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_location_permission"
        android:id="@+id/button_denies_location_permission"
        android:text="@string/label_button_loc_perm_denies"
        android:layout_margin="12dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>