<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/forecastFragment">

    <fragment
        android:id="@+id/forecastFragment"
        android:name="ustun.muharrem.weatherforecast.screens.forecastfragment.ForecastFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_forecast" >
        <action
            android:id="@+id/action_forecastFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_forecastFragment_to_forecastDetailsFragment"
            app:destination="@id/forecastDetailsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/forecastDetailsFragment"
        android:name="ustun.muharrem.weatherforecast.screens.forecastdetails.ForecastDetailsFragment"
        android:label="@string/details_fragment_label"
        tools:layout="@layout/fragment_forecast_details" >
        <action
            android:id="@+id/action_forecastDetailsFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="position"
            app:argType="integer"/>
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ustun.muharrem.weatherforecast.screens.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>